[gd_scene load_steps=13 format=3 uid="uid://c6y5sca13ppl1"]

[ext_resource type="Script" uid="uid://dctih05lie1cl" path="res://player/player.gd" id="1_player"]
[ext_resource type="Texture2D" uid="uid://6pitnusscm50" path="res://assets/images/player/idle.png" id="2_idle"]
[ext_resource type="Script" uid="uid://y660hd0lilg7" path="res://components/sound_manager.gd" id="3_sound"]
[ext_resource type="Script" uid="uid://d3jub3pgmclh7" path="res://components/particle_manager.gd" id="4_particle"]
[ext_resource type="Script" uid="uid://bmbr8v6sfbwf7" path="res://components/growth_manager.gd" id="5_growth"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(184, 124)

[sub_resource type="Animation" id="Animation_dqkch"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dive"]
resource_name = "dive"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.02, 0.733333, 1.36667, 2.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_swim"]
resource_name = "swim"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_dqkch"),
&"dive": SubResource("Animation_dive"),
&"idle": SubResource("Animation_qhqgy"),
&"swim": SubResource("Animation_swim")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fish"]
size = Vector2(200, 140)

[node name="Player" type="RigidBody2D" groups=["player"]]
collision_mask = 14
gravity_scale = 0.0
lock_rotation = true
linear_damp = 1.0
script = ExtResource("1_player")

[node name="SoundManager" type="Node" parent="."]
script = ExtResource("3_sound")

[node name="ParticleManager" type="Node2D" parent="."]
script = ExtResource("4_particle")

[node name="GrowthManager" type="Node" parent="."]
script = ExtResource("5_growth")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(107, 64)
shape = SubResource("RectangleShape2D_onrkg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(115, 66)
scale = Vector2(0.538086, 0.538086)
texture = ExtResource("2_idle")
hframes = 3

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(115, 66)
position_smoothing_enabled = true
position_smoothing_speed = 3.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
editor_draw_drag_margin = true

[node name="FishDetector" type="Area2D" parent="."]
position = Vector2(107, 64)
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishDetector"]
shape = SubResource("RectangleShape2D_fish")

[connection signal="area_entered" from="FishDetector" to="." method="_on_area_entered"]
